Revert "Fixed a Issue that would cause Problems in non Firefox browsers"
This reverts commit aac0c472a3f9d2bfd9cb5033f9cc4ec16ed8acfc.

While not untrue, the opposite worse

--- a/public/static/css/structure.css
+++ b/public/static/css/structure.css
@@ -5,7 +5,7 @@
     display : flex;
     align-items: center;
     flex-direction : colum;
-    /*min-height : 100%; Caused Problems in non Firefox browsers*/
+    min-height : 100%;
     height : auto;
 }
 
